# routes/api.php
@@ -24,6 +24,7 @@ Route::post('admin/login', [AdminController::class, 'login']);
 
 Route::prefix('admin')->group(function () {
     Route::get('comptes', [AdminController::class, 'getComptes']);
+    Route::post('comptes', [AdminController::class, 'createCompte']);
     Route::get('comptes/archived', [AdminController::class, 'getComptesArchived']);
     Route::get('comptes/{id}', [AdminController::class, 'getCompteDetails']);
     Route::put('comptes/{id}', [AdminController::class, 'updateCompte']);
